<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:padding="@dimen/small_padding"
            android:text="@string/interests"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/view_all"
            android:textSize="@dimen/small_text_size" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/interests_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"></androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/available"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/available_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />


</LinearLayout>