<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Parent Layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@drawable/bottom_border">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/drawable_padding_left"
                android:src="@drawable/ic_back" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            android:background="@drawable/login_background"
            android:padding="20dp">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/very_large_margin_top"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/very_large_margin_top"
                android:text="@string/link_message"
                android:textSize="15sp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/average_height"
                android:layout_centerInParent="true"
                android:background="@drawable/login_background_button"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/drawable_padding_left"
                android:hint="@string/email"
                android:padding="10dp" />

            <Button
                android:id="@+id/send_link"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/very_large_margin_top"
                android:background="@drawable/login_background_button"
                android:text="@string/send_link" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/send_link"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/icon_size"
                android:indeterminateTint="@color/cardview_light_background"
                android:outlineAmbientShadowColor="@color/colorGray"
                android:progressTint="@color/colorAlmostFirst"
                android:visibility="invisible" />

        </RelativeLayout>
    </RelativeLayout>
    <!--Parent Layout-->
    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>